--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src = "">
+	<h1>Neha Mittal</h1>
+	<a href = "">https://www.linkedin.com/in/neha-mittal-a8487818/</a>
+	<section id="skills">
+		<ol>
+			<li>HTML</li>
+			<li>CSS</li>
+	</section>
+	<section id = "projects">
+		<ul>
+			<li>blinkit clone</li>
+		<li>Beagle Blog</li>
+		</ul>
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
